test/parser/should_fail/parens3.souc.bad
main() = do
    if "ok"
        print "unopened paren")
    end if
end main
